--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
       </div>
       
       <div class="home-page-links col-xs-4 col-sm-3">
-        <h4 class="home-page-link"><a href="projects">SITE<!-- projects --></a></h4>
-        <h4 class="home-page-link"><a href="blog">IS<!-- blog --></a></h4>
-        <h4 class="home-page-link"><a href="misc">UNDER<!-- misc. --></a></h4>
-        <h4 class="home-page-link"><a href="contact">CONSTRUCTION<!-- contact --></a></h4>
+        <h4 class="home-page-link"><a href="./projects">SITE<!-- projects --></a></h4>
+        <h4 class="home-page-link"><a href="./blog">IS<!-- blog --></a></h4>
+        <h4 class="home-page-link"><a href="./misc">UNDER<!-- misc. --></a></h4>
+        <h4 class="home-page-link"><a href="./contact">CONSTRUCTION<!-- contact --></a></h4>
       </div>
 
     </div>
