js script for user nav and euler page updates

--- a/contact.html
+++ b/contact.html
@@ -7,12 +7,7 @@
   <script src="https://use.fontawesome.com/de05a4e1f9.js"></script>
   <script src="js/jquery.js"></script>
   <script src="js/bootstrap.min.js"></script>
-  <script> 
-  $(function(){
-    $("#footerContent").load("primary-footer.html");
-    $("#homePageLinksContent").load("primary-page-links.html"); 
-  });
-  </script>
+  <script src="../js/custom.js"></script>
 
   <title>dchen.io | contact</title>
   
