--- a/index.html
+++ b/index.html
@@ -9,11 +9,7 @@
   <script src="https://use.fontawesome.com/de05a4e1f9.js"></script>
   <script src="js/jquery.js"></script>
   <script src="js/bootstrap.min.js"></script>
-  <script> 
-    $(function(){
-      $("#footerContent").load("primary-footer.html"); 
-    });
-  </script>
+  <script src="../js/custom.js"></script>
 
   <title>dchen.io</title>
   
@@ -33,10 +29,10 @@
       </div>
       
       <div class="home-page-links col-xs-4 col-sm-3">
-        <h4 class="home-page-link"><a href="./projects">SITE<!-- projects --></a></h4>
-        <h4 class="home-page-link"><a href="./blog">IS<!-- blog --></a></h4>
-        <h4 class="home-page-link"><a href="./misc">UNDER<!-- misc. --></a></h4>
-        <h4 class="home-page-link"><a href="./contact">CONSTRUCTION<!-- contact --></a></h4>
+        <h4 class="home-page-link"><a href="./projects.html">SITE<!-- projects --></a></h4>
+        <h4 class="home-page-link"><a href="./blog.html">IS<!-- blog --></a></h4>
+        <h4 class="home-page-link"><a href="./misc.html">UNDER<!-- misc. --></a></h4>
+        <h4 class="home-page-link"><a href="./contact.html">CONSTRUCTION<!-- contact --></a></h4>
       </div>
 
     </div>
