--- a/misc.html
+++ b/misc.html
@@ -7,12 +7,7 @@
   <script src="https://use.fontawesome.com/de05a4e1f9.js"></script>
   <script src="js/jquery.js"></script>
   <script src="js/bootstrap.min.js"></script>
-  <script> 
-  $(function(){
-    $("#footerContent").load("primary-footer.html");
-    $("#homePageLinksContent").load("primary-page-links.html"); 
-  });
-  </script>
+  <script src="../js/custom.js"></script>
 
   <title>dchen.io | misc</title>
   
@@ -35,33 +30,33 @@
 
           <!-- Begin misc items -->
 
-          <div class="page-content-item">
+          <div class="misc-content">
             <div class="page-content-item-title">
-              <h4>Photography</h4>
+              <h3>Photography</h3>
             </div>
-            <div class="page-content-item-text">
+            <div class="misc-section-content">
               <p>
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti dolorem quisquam, facilis ipsa, rem itaque explicabo enim maxime placeat quo cupiditate eligendi modi libero porro quidem vitae sequi ea doloribus deserunt numquam quas magni nisi, illo? Quam minima explicabo quod officiis dicta vero error facere qui, facilis. Adipisci, quaerat animi.
               </p>
             </div>
           </div>
 
-          <div class="page-content-item">
+          <div class="misc-content">
             <div class="page-content-item-title">
-              <h4>Graphic Design</h4>
+              <h3>Graphic Design</h3>
             </div>
-            <div class="page-content-item-text">
+            <div class="misc-section-content">
               <p>
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus rem ut laudantium, laboriosam necessitatibus itaque eum perspiciatis voluptatum, beatae at, quasi ipsa. Delectus minima dicta laboriosam eius consectetur possimus nam error, praesentium quod asperiores architecto, eos commodi nisi tenetur, consequuntur saepe dolore fuga omnis officia vel id iusto eum? Eos.
               </p>
             </div>
           </div>
 
-          <div class="page-content-item">
+          <div class="misc-content">
             <div class="page-content-item-title">
-              <h4>Videography</h4>
+              <h3>Videography</h3>
             </div>
-            <div class="page-content-item-text">
+            <div class="misc-section-content">
               <p>
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere saepe, quod fugit eius delectus dolorem quisquam inventore debitis porro provident eveniet sapiente quis quos vero a, ad accusamus. Iure saepe, tenetur nobis iste nesciunt, mollitia nihil accusantium dolorem, reiciendis distinctio velit nulla animi beatae possimus enim veritatis perspiciatis, numquam sequi.
               </p>
