--- a/primary-page-links.html
+++ b/primary-page-links.html
@@ -1,7 +1,7 @@
 <div class="row">
-	<div class="col-xs-6 col-sm-12"><h4 class="home-page-link"><a href="projects.html">projects</a></h4></div>
-	<div class="col-xs-6 col-sm-12"><h4 class="home-page-link"><a href="blog.html"><s>blog</s></a></h4></div>
-	<div class="col-xs-6 col-sm-12"><h4 class="home-page-link"><a href="misc.html">misc.</a></h4></div>
-	<div class="col-xs-6 col-sm-12"><h4 class="home-page-link"><a href="contact.html">contact</a></h4></div>
-	<div class="col-xs-6 col-sm-12"><h4 class="home-page-link"><a href="index.html">home</a></h4></div>
+	<div class="col-xs-6 col-sm-12"><h4 class="home-page-link"><a href="../projects.html">projects</a></h4></div>
+	<div class="col-xs-6 col-sm-12"><h4 class="home-page-link"><a href="../blog.html"><s>blog</s></a></h4></div>
+	<div class="col-xs-6 col-sm-12"><h4 class="home-page-link"><a href="../misc.html">misc.</a></h4></div>
+	<div class="col-xs-6 col-sm-12"><h4 class="home-page-link"><a href="../contact.html">contact</a></h4></div>
+	<div class="col-xs-6 col-sm-12"><h4 class="home-page-link"><a href="../index.html">home</a></h4></div>
 </div>
