--- a/projects.html
+++ b/projects.html
@@ -7,12 +7,7 @@
   <script src="https://use.fontawesome.com/de05a4e1f9.js"></script>
   <script src="js/jquery.js"></script>
   <script src="js/bootstrap.min.js"></script>
-  <script> 
-  $(function(){
-    $("#footerContent").load("primary-footer.html");
-    $("#homePageLinksContent").load("primary-page-links.html"); 
-  });
-  </script>
+  <script src="../js/custom.js"></script>
 
   <title>dchen.io | projects</title>
   
@@ -33,26 +28,25 @@
 
         <div class="row">
 
-          <p>Note: The tag buttons are currently non-clickable until implementation. &mdash;dc</p>
-          <br>
+          <!-- <p>Note: The tag buttons are currently non-clickable until implementation. &mdash;dc</p>
+          <br> -->
 
           <!-- Lead page item and example element. Use as base for all others. -->
 
           <div class="page-content-item">
             <div class="page-content-item-title">
-              <h4>
-                <a href="index.html">Project Euler</a>
-              </h4>
+              <h3>
+                <a href="projects/project-euler.html">Project Euler</a>
+              </h3>
             </div>
             <div class="page-content-item-tags">
-              <p>Tags:</p>
               <button type="button" class="btn btn btn-default btn-xs">python</button>
               <button type="button" class="btn btn btn-default btn-xs">math</button>
             </div>
             <div class="page-content-item-text">
               <p>
-                <a href="index.html">
-                  This is an ongoing project detailing my attempts, solutions, and coding process to the math and programming problems featured on the Project Euler webpage. Last updated August 16, 2016&mdash;up to problem number 20.
+                <a href="projects/project-euler.html">
+                  This is an ongoing project detailing my attempts, solutions, and coding process to the math and programming problems featured on the Project Euler website. Last updated August 16, 2016&mdash;up to problem number 20.
                 </a>
               </p>
             </div>
@@ -60,26 +54,7 @@
 
           <!-- Lead page item element ends here. -->
 
-          <div class="page-content-item">
-            <div class="page-content-item-title">
-              <h4>
-                <a href="index.html">Project Euler</a>
-              </h4>
-            </div>
-            <div class="page-content-item-tags">
-              <p>Tags:</p>
-              <button type="button" class="btn btn btn-default btn-xs">python</button>
-              <button type="button" class="btn btn btn-default btn-xs">math</button>
-            </div>
-            <div class="page-content-item-text">
-              <p>
-                <a href="index.html">
-                  This is an ongoing project detailing my attempts, solutions, and coding process to the math and programming problems featured on the Project Euler webpage. Last updated August 16, 2016&mdash;up to problem number 20.
-                </a>
-              </p>
-            </div>
-          </div>
-
+          
           <!-- All page item elements end here -->
 
         </div>
