--- a/projects.html
+++ b/projects.html
@@ -34,15 +34,19 @@
           <!-- Lead page item and example element. Use as base for all others. -->
 
           <div class="page-content-item">
+
             <div class="page-content-item-title">
               <h3>
                 <a href="projects/project-euler.html">Project Euler</a>
               </h3>
             </div>
+
             <div class="page-content-item-tags">
               <button type="button" class="btn btn btn-default btn-xs">python</button>
               <button type="button" class="btn btn btn-default btn-xs">math</button>
+              <button type="button" class="btn btn btn-default btn-xs">euler</button>
             </div>
+
             <div class="page-content-item-text">
               <p>
                 <a href="projects/project-euler.html">
