fixed row tags + some misc things

--- a/misc.html
+++ b/misc.html
@@ -35,9 +35,18 @@
               <h3>Photography</h3>
             </div>
             <div class="misc-section-content">
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti dolorem quisquam, facilis ipsa, rem itaque explicabo enim maxime placeat quo cupiditate eligendi modi libero porro quidem vitae sequi ea doloribus deserunt numquam quas magni nisi, illo? Quam minima explicabo quod officiis dicta vero error facere qui, facilis. Adipisci, quaerat animi.
-              </p>
+              <div class="row">
+                <div class="col-sm-12">
+                <img src="../misc/photography/example.jpg" alt="Example" class="misc-photo">
+                <img src="../misc/photography/example.jpg" alt="Example" class="misc-photo">
+                <img src="../misc/photography/example.jpg" alt="Example" class="misc-photo">
+                <img src="../misc/photography/example.jpg" alt="Example" class="misc-photo">
+                <img src="../misc/photography/example.jpg" alt="Example" class="misc-photo">
+                <img src="../misc/photography/example.jpg" alt="Example" class="misc-photo">
+                <img src="../misc/photography/example.jpg" alt="Example" class="misc-photo">
+                </div>
+              </div>
+
             </div>
           </div>
 
