--- a/projects/project-euler.html
+++ b/projects/project-euler.html
@@ -46,7 +46,7 @@
             <div class="project-content">
 
               <p>Last updated August 16, 2016.</p>
-              <row>
+              <div class="row">
                 <div class="col-xs-12 euler-anchor-links">
                   <a href=""><div class="euler-anchor-link">1</div></a>
                   <a href=""><div class="euler-anchor-link">2</div></a>
@@ -74,9 +74,9 @@
                   <a href=""><div class="euler-anchor-link">24</div></a>
                   <a href=""><div class="euler-anchor-link">25</div></a>
                 </div>
-              </row>
+              </div>
 
-              <br><br>
+              <br>
 
               <h4 id="euler1">Problem 1</h4>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id numquam expedita voluptatem earum nisi optio voluptatum deleniti fuga, reprehenderit quo cupiditate commodi, et fugiat quae?</p>
