--- a/misc.html
+++ b/misc.html
@@ -38,11 +38,11 @@
               <div class="row">
                 <div class="col-sm-12">
                 <img src="../misc/photography/example.jpg" alt="Example" class="misc-photo">
+                <img src="../misc/photography/example.JPG" alt="Example" class="misc-photo">
                 <img src="../misc/photography/example.jpg" alt="Example" class="misc-photo">
+                <img src="../misc/photography/example.JPG" alt="Example" class="misc-photo">
                 <img src="../misc/photography/example.jpg" alt="Example" class="misc-photo">
-                <img src="../misc/photography/example.jpg" alt="Example" class="misc-photo">
-                <img src="../misc/photography/example.jpg" alt="Example" class="misc-photo">
-                <img src="../misc/photography/example.jpg" alt="Example" class="misc-photo">
+                <img src="../misc/photography/example.JPG" alt="Example" class="misc-photo">
                 <img src="../misc/photography/example.jpg" alt="Example" class="misc-photo">
                 </div>
               </div>
