fixed row tags + some misc things

--- a/misc.html
+++ b/misc.html
@@ -37,13 +37,13 @@
             <div class="misc-section-content">
               <div class="row">
                 <div class="col-sm-12">
-                <img src="../misc/photography/example.jpg" alt="Example" class="misc-photo">
-                <img src="../misc/photography/example.JPG" alt="Example" class="misc-photo">
-                <img src="../misc/photography/example.jpg" alt="Example" class="misc-photo">
-                <img src="../misc/photography/example.JPG" alt="Example" class="misc-photo">
-                <img src="../misc/photography/example.jpg" alt="Example" class="misc-photo">
-                <img src="../misc/photography/example.JPG" alt="Example" class="misc-photo">
-                <img src="../misc/photography/example.jpg" alt="Example" class="misc-photo">
+                <img src="../misc/photography/image.jpg" alt="Example" class="misc-photo">
+                <img src="../misc/photography/image.jpg" alt="Example" class="misc-photo">
+                <img src="../misc/photography/image.jpg" alt="Example" class="misc-photo">
+                <img src="../misc/photography/image.jpg" alt="Example" class="misc-photo">
+                <img src="../misc/photography/image.jpg" alt="Example" class="misc-photo">
+                <img src="../misc/photography/image.jpg" alt="Example" class="misc-photo">
+                <img src="../misc/photography/image.jpg" alt="Example" class="misc-photo">
                 </div>
               </div>
 
