--- a/misc.html
+++ b/misc.html
@@ -36,25 +36,25 @@
             </div>
             <div class="misc-section-content">
               <div class="row">
-                <div class="col-sm-6"><img src="../misc/photography/img-1.jpg" alt="Example" class="misc-photo"></div>
+                <div class="col-sm-6"><img src="../misc/photography/img-1.JPG" alt="Example" class="misc-photo"></div>
                 <div class="col-sm-6">
                   <div class="row">
-                    <div class="col-sm-6"><img src="../misc/photography/img-1.jpg" alt="Example" class="misc-photo"></div>
+                    <div class="col-sm-6"><img src="../misc/photography/img-1.JPG" alt="Example" class="misc-photo"></div>
                     <div class="col-sm-6">
                       <div class="row">
-                        <div class="col-sm-6"><img src="../misc/photography/img-1.jpg" alt="Example" class="misc-photo"></div>
-                        <div class="col-sm-6"><img src="../misc/photography/img-1.jpg" alt="Example" class="misc-photo"></div>
+                        <div class="col-sm-6"><img src="../misc/photography/img-1.JPG" alt="Example" class="misc-photo"></div>
+                        <div class="col-sm-6"><img src="../misc/photography/img-1.JPG" alt="Example" class="misc-photo"></div>
                       </div>
                       <div class="row top-buffer">
-                        <div class="col-sm-6"><img src="../misc/photography/img-1.jpg" alt="Example" class="misc-photo"></div>
-                        <div class="col-sm-6"><img src="../misc/photography/img-1.jpg" alt="Example" class="misc-photo"></div>
+                        <div class="col-sm-6"><img src="../misc/photography/img-1.JPG" alt="Example" class="misc-photo"></div>
+                        <div class="col-sm-6"><img src="../misc/photography/img-1.JPG" alt="Example" class="misc-photo"></div>
                       </div>                      
                     </div>
                   </div>
 
                   <div class="row top-buffer">
-                    <div class="col-sm-6"><img src="../misc/photography/img-1.jpg" alt="Example" class="misc-photo"></div>
-                    <div class="col-sm-6"><img src="../misc/photography/img-1.jpg" alt="Example" class="misc-photo"></div>
+                    <div class="col-sm-6"><img src="../misc/photography/img-1.JPG" alt="Example" class="misc-photo"></div>
+                    <div class="col-sm-6"><img src="../misc/photography/img-1.JPG" alt="Example" class="misc-photo"></div>
                   </div>
 
                 </div>
