--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
 </head>
 <body>
   <div class="container">
-    <div class="row text-center title-text"><h1>David Chen</h1><h4>software developer</h4></div>
+    <div class="row text-center title-text" id="topTitleContent"></div>
     
     <div class="row links-and-content">
 
