--- a/projects.html
+++ b/projects.html
@@ -18,7 +18,7 @@
 </head>
 <body>
   <div class="container">
-    <div class="row text-center title-text"><h1>David Chen</h1><h4>software developer</h4></div>
+    <div class="row text-center title-text" id="topTitleContent"></div>
     
     <div class="row links-and-content">
 
@@ -27,9 +27,6 @@
       <div class="page-content col-sm-9">
 
         <div class="row">
-
-          <!-- <p>Note: The tag buttons are currently non-clickable until implementation. &mdash;dc</p>
-          <br> -->
 
           <!-- Lead page item and example element. Use as base for all others. -->
 
@@ -50,7 +47,7 @@
             <div class="page-content-item-text">
               <p>
                 <a href="projects/project-euler.html">
-                  This is an ongoing project detailing my attempts, solutions, and coding process to the math and programming problems featured on the Project Euler website. Last updated August 16, 2016&mdash;up to problem number 20.
+                  This is an ongoing project detailing my attempts, solutions, and coding process to the math and programming problems featured on the Project Euler website. Problems 1 through 20 are currently documented here.
                 </a>
               </p>
             </div>
