--- a/projects/project-euler.html
+++ b/projects/project-euler.html
@@ -8,6 +8,7 @@
   <script src="../js/jquery.js"></script>
   <script src="../js/bootstrap.min.js"></script>
   <script src="../js/custom.js"></script>
+  
   <title>dchen.io | projects</title>
   
   <!-- Bootstrap -->
@@ -17,7 +18,7 @@
 </head>
 <body>
   <div class="container">
-    <div class="row text-center title-text"><h1>David Chen</h1><h4>software developer</h4></div>
+    <div class="row text-center title-text" id="topTitleContent"></div>
     
     <div class="row links-and-content">
 
@@ -40,12 +41,13 @@
             <div class="page-content-item-tags"> 
               <button type="button" class="btn btn btn-default btn-xs">python</button>
               <button type="button" class="btn btn btn-default btn-xs">math</button>
+              <button type="button" class="btn btn btn-default btn-xs">euler</button>
             </div>
 
             <!-- Page text -->
             <div class="project-content">
 
-              <p>Last updated August 16, 2016.</p>
+              <p>Last updated August 21, 2016.</p>
               <div class="row">
                 <div class="col-xs-12 euler-anchor-links">
                   <a href=""><div class="euler-anchor-link">1</div></a>
@@ -89,10 +91,6 @@
 
               <h4 id="euler4">Problem 4</h4>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id numquam expedita voluptatem earum nisi optio voluptatum deleniti fuga, reprehenderit quo cupiditate commodi, et fugiat quae?</p>
-
-
-
-
               
             </div>
           </div>
