--- a/index.html
+++ b/index.html
@@ -4,8 +4,6 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="refresh" content="15">
-
   <script src="https://use.fontawesome.com/de05a4e1f9.js"></script>
   <script src="js/jquery.js"></script>
   <script src="js/bootstrap.min.js"></script>
@@ -29,10 +27,10 @@
       </div>
       
       <div class="home-page-links col-xs-4 col-sm-3">
-        <h4 class="home-page-link"><a href="../projects.html">SITE<!-- projects --></a></h4>
-        <h4 class="home-page-link"><a href="../blog.html">IS<!-- blog --></a></h4>
-        <h4 class="home-page-link"><a href="../misc.html">UNDER<!-- misc. --></a></h4>
-        <h4 class="home-page-link"><a href="../contact.html">CONSTRUCTION<!-- contact --></a></h4>
+        <h4 class="home-page-link"><a href="../projects.html">projects</a></h4>
+        <h4 class="home-page-link"><a href="../blog.html">blog</a></h4>
+        <h4 class="home-page-link"><a href="../misc.html">misc.</a></h4>
+        <h4 class="home-page-link"><a href="../contact.html">contact</a></h4>
       </div>
 
     </div>
