removed meta refresh from all

--- a/projects/project-euler.html
+++ b/projects/project-euler.html
@@ -50,31 +50,31 @@
               <p>Last updated August 21, 2016.</p>
               <div class="row">
                 <div class="col-xs-12 euler-anchor-links">
-                  <a href="euler1"><div class="euler-anchor-link">1</div></a>
-                  <a href="euler2"><div class="euler-anchor-link">2</div></a>
-                  <a href="euler3"><div class="euler-anchor-link">3</div></a>
-                  <a href="euler4"><div class="euler-anchor-link">4</div></a>
-                  <a href="euler5"><div class="euler-anchor-link">5</div></a>
-                  <a href="euler6"><div class="euler-anchor-link">6</div></a>
-                  <a href="euler7"><div class="euler-anchor-link">7</div></a>
-                  <a href="euler8"><div class="euler-anchor-link">8</div></a>
-                  <a href="euler9"><div class="euler-anchor-link">9</div></a>
-                  <a href="euler10"><div class="euler-anchor-link">10</div></a>
-                  <a href="euler11"><div class="euler-anchor-link">11</div></a>
-                  <a href="euler12"><div class="euler-anchor-link">12</div></a>
-                  <a href="euler13"><div class="euler-anchor-link">13</div></a>
-                  <a href="euler14"><div class="euler-anchor-link">14</div></a>
-                  <a href="euler15"><div class="euler-anchor-link">15</div></a>
-                  <a href="euler16"><div class="euler-anchor-link">16</div></a>
-                  <a href="euler17"><div class="euler-anchor-link">17</div></a>
-                  <a href="euler18"><div class="euler-anchor-link">18</div></a>
-                  <a href="euler19"><div class="euler-anchor-link">19</div></a>
-                  <a href="euler20"><div class="euler-anchor-link">20</div></a>
-                  <a href="euler21"><div class="euler-anchor-link">21</div></a>
-                  <a href="euler22"><div class="euler-anchor-link">22</div></a>
-                  <a href="euler23"><div class="euler-anchor-link">23</div></a>
-                  <a href="euler24"><div class="euler-anchor-link">24</div></a>
-                  <a href="euler25"><div class="euler-anchor-link">25</div></a>
+                  <a href="#euler1"><div class="euler-anchor-link">1</div></a>
+                  <a href="#euler2"><div class="euler-anchor-link">2</div></a>
+                  <a href="#euler3"><div class="euler-anchor-link">3</div></a>
+                  <a href="#euler4"><div class="euler-anchor-link">4</div></a>
+                  <a href="#euler5"><div class="euler-anchor-link">5</div></a>
+                  <a href="#euler6"><div class="euler-anchor-link">6</div></a>
+                  <a href="#euler7"><div class="euler-anchor-link">7</div></a>
+                  <a href="#euler8"><div class="euler-anchor-link">8</div></a>
+                  <a href="#euler9"><div class="euler-anchor-link">9</div></a>
+                  <a href="#euler10"><div class="euler-anchor-link">10</div></a>
+                  <a href="#euler11"><div class="euler-anchor-link">11</div></a>
+                  <a href="#euler12"><div class="euler-anchor-link">12</div></a>
+                  <a href="#euler13"><div class="euler-anchor-link">13</div></a>
+                  <a href="#euler14"><div class="euler-anchor-link">14</div></a>
+                  <a href="#euler15"><div class="euler-anchor-link">15</div></a>
+                  <a href="#euler16"><div class="euler-anchor-link">16</div></a>
+                  <a href="#euler17"><div class="euler-anchor-link">17</div></a>
+                  <a href="#euler18"><div class="euler-anchor-link">18</div></a>
+                  <a href="#euler19"><div class="euler-anchor-link">19</div></a>
+                  <a href="#euler20"><div class="euler-anchor-link">20</div></a>
+                  <a href="#euler21"><div class="euler-anchor-link">21</div></a>
+                  <a href="#euler22"><div class="euler-anchor-link">22</div></a>
+                  <a href="#euler23"><div class="euler-anchor-link">23</div></a>
+                  <a href="#euler24"><div class="euler-anchor-link">24</div></a>
+                  <a href="#euler25"><div class="euler-anchor-link">25</div></a>
                 </div>
               </div>
 
