--- a/projects.html
+++ b/projects.html
@@ -14,7 +14,7 @@
   <!-- Bootstrap -->
   <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="css/custom-style.css">
-  <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon"/>
+  <link rel="shortcut icon" type="image/x-icon" href="../images/favicon.ico">
 </head>
 <body>
   <div class="container">
