--- a/projects/project-euler.html
+++ b/projects/project-euler.html
@@ -59,7 +59,7 @@
               <p>No solution documented here yet.</p>
 
               <h4 class="euler-problem-title">Problem 3 - Largest prime factor</h4>
-              <pre class="text-center">Question:
+              <pre>Question:
 The prime factors of 13195 are 5, 7, 13 and 29.
 What is the largest prime factor of the number 600851475143?</pre>
 
@@ -76,7 +76,7 @@ What is the largest prime factor of the number 600851475143?</pre>
               <p>No solution documented here yet.</p>
               
               <h4 class="euler-problem-title">Problem 8 - Largest product in a series</h4>
-              <pre class="text-center">Question:
+              <pre>Question:
 The four adjacent digits in the 1000-digit number that have the greatest product are 9 × 9 × 8 × 9 = 5832.
 
 73167176531330624919225119674426574742355349194934
