finally implemented tag system!!

--- a/projects.html
+++ b/projects.html
@@ -39,9 +39,9 @@
             </div>
 
             <div class="page-content-item-tags">
-              <button type="button" class="btn btn btn-default btn-xs">python</button>
-              <button type="button" class="btn btn btn-default btn-xs">math</button>
-              <button type="button" class="btn btn btn-default btn-xs">euler</button>
+              <button type="button" class="btn btn-default btn-xs tag-button">python</button>
+              <button type="button" class="btn btn-default btn-xs tag-button">math</button>
+              <button type="button" class="btn btn-default btn-xs tag-button">euler</button>
             </div>
 
             <div class="page-content-item-text">
@@ -54,6 +54,57 @@
           </div>
 
           <!-- Lead page item element ends here. -->
+
+          <div class="page-content-item">
+
+            <div class="page-content-item-title">
+              <h3>
+                <a href="projects/project-euler.html">Project Euler</a>
+              </h3>
+            </div>
+
+            <div class="page-content-item-tags">
+              <button type="button" class="btn btn-default btn-xs tag-button">math</button>
+              <button type="button" class="btn btn-default btn-xs tag-button">logic</button>
+              <button type="button" class="btn btn-default btn-xs tag-button">geography</button>
+            </div>
+
+            <div class="page-content-item-text">
+              <p>
+                <a href="projects/project-euler.html">
+                  This is an ongoing project detailing my attempts, solutions, and coding process to the math and programming problems featured on the Project Euler website. Problems 1 through 20 are currently documented here.
+                </a>
+              </p>
+            </div>
+          </div>
+
+
+
+
+
+          <div class="page-content-item">
+
+            <div class="page-content-item-title">
+              <h3>
+                <a href="projects/project-euler.html">Project Euler</a>
+              </h3>
+            </div>
+
+            <div class="page-content-item-tags">
+              <button type="button" class="btn btn-default btn-xs tag-button">wow</button>
+              <button type="button" class="btn btn-default btn-xs tag-button">i</button>
+              <button type="button" class="btn btn-default btn-xs tag-button">finally</button>
+              <button type="button" class="btn btn-default btn-xs tag-button">did it</button>
+            </div>
+
+            <div class="page-content-item-text">
+              <p>
+                <a href="projects/project-euler.html">
+                  This is an ongoing project detailing my attempts, solutions, and coding process to the math and programming problems featured on the Project Euler website. Problems 1 through 20 are currently documented here.
+                </a>
+              </p>
+            </div>
+          </div>
 
           
           <!-- All page item elements end here -->
