--- a/projects/project-euler.html
+++ b/projects/project-euler.html
@@ -39,9 +39,9 @@
 
             <!-- Page tags -->
             <div class="page-content-item-tags"> 
-              <button type="button" class="btn btn btn-default btn-xs">python</button>
-              <button type="button" class="btn btn btn-default btn-xs">math</button>
-              <button type="button" class="btn btn btn-default btn-xs">euler</button>
+              <button type="button" class="btn btn-default btn-xs tag-button">python</button>
+              <button type="button" class="btn btn-default btn-xs tag-button">math</button>
+              <button type="button" class="btn btn-default btn-xs tag-button">euler</button>
             </div>
 
             <!-- Page text -->
@@ -130,7 +130,7 @@
                 <br><br>
                 There exists exactly one Pythagorean triplet for which a + b + c = 1000.
                 <br><br>
-                Find the product abc.
+                Find the product a × b × c.
               </em></p>
 
               <h4 class="euler-problem-title">Problem 10 - Summation of primes</h4>
