removed .html from index to test

--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://use.fontawesome.com/de05a4e1f9.js"></script>
-  <script src="js/jquery.js"></script>
-  <script src="js/bootstrap.min.js"></script>
-  <script src="../js/custom.js"></script>
+  <script src="/js/jquery.js"></script>
+  <script src="/js/bootstrap.min.js"></script>
+  <script src="/js/custom.js"></script>
 
   <title>dchen.io</title>
   
   <!-- Bootstrap -->
-  <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-  <link rel="stylesheet" type="text/css" href="css/custom-style.css">
-  <link rel="shortcut icon" type="image/x-icon" href="../images/favicon.ico">
+  <link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="/css/custom-style.css">
+  <link rel="shortcut icon" type="image/x-icon" href="/images/favicon.ico">
 </head>
 <body>
   <div class="container">
@@ -27,10 +27,10 @@
       </div>
       
       <div class="home-page-links col-xs-4 col-sm-3">
-        <h4 class="home-page-link"><a href="../projects">projects</a></h4>
-        <h4 class="home-page-link"><a href="../blog">blog</a></h4>
-        <h4 class="home-page-link"><a href="../misc">misc.</a></h4>
-        <h4 class="home-page-link"><a href="../contact">contact</a></h4>
+        <h4 class="home-page-link"><a href="/projects">projects</a></h4>
+        <h4 class="home-page-link"><a href="/blog">blog</a></h4>
+        <h4 class="home-page-link"><a href="/misc">misc.</a></h4>
+        <h4 class="home-page-link"><a href="/contact">contact</a></h4>
       </div>
 
     </div>
