added .htaccess file

--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
       </div>
       
       <div class="home-page-links col-xs-4 col-sm-3">
-        <h4 class="home-page-link"><a href="/projects">projects</a></h4>
-        <h4 class="home-page-link"><a href="/blog">blog</a></h4>
-        <h4 class="home-page-link"><a href="/misc">misc.</a></h4>
-        <h4 class="home-page-link"><a href="/contact">contact</a></h4>
+        <h4 class="home-page-link"><a href="/projects.html">projects</a></h4>
+        <h4 class="home-page-link"><a href="/blog.html">blog</a></h4>
+        <h4 class="home-page-link"><a href="/misc.html">misc.</a></h4>
+        <h4 class="home-page-link"><a href="/contact.html">contact</a></h4>
       </div>
 
     </div>
