--- a/misc.html
+++ b/misc.html
@@ -5,16 +5,16 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://use.fontawesome.com/de05a4e1f9.js"></script>
-  <script src="js/jquery.js"></script>
-  <script src="js/bootstrap.min.js"></script>
-  <script src="../js/custom.js"></script>
+  <script src="/js/jquery.js"></script>
+  <script src="/js/bootstrap.min.js"></script>
+  <script src="/js/custom.js"></script>
 
   <title>dchen.io | misc</title>
   
   <!-- Bootstrap -->
-  <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-  <link rel="stylesheet" type="text/css" href="css/custom-style.css">
-  <link rel="shortcut icon" type="image/x-icon" href="../images/favicon.ico">
+  <link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="/css/custom-style.css">
+  <link rel="shortcut icon" type="image/x-icon" href="/images/favicon.ico">
 </head>
 <body>
   <div class="container">
@@ -36,25 +36,25 @@
             </div>
             <div class="misc-section-content">
               <div class="row">
-                <div class="col-sm-6"><img src="../misc/photography/img-1.JPG" alt="Example" class="misc-photo"></div>
+                <div class="col-sm-6"><img src="/misc/photography/img-1.JPG" alt="Example" class="misc-photo"></div>
                 <div class="col-sm-6">
                   <div class="row">
-                    <div class="col-sm-6"><img src="../misc/photography/img-1.JPG" alt="Example" class="misc-photo"></div>
+                    <div class="col-sm-6"><img src="/misc/photography/img-1.JPG" alt="Example" class="misc-photo"></div>
                     <div class="col-sm-6">
                       <div class="row">
-                        <div class="col-sm-6"><img src="../misc/photography/img-1.JPG" alt="Example" class="misc-photo"></div>
-                        <div class="col-sm-6"><img src="../misc/photography/img-1.JPG" alt="Example" class="misc-photo"></div>
+                        <div class="col-sm-6"><img src="/misc/photography/img-1.JPG" alt="Example" class="misc-photo"></div>
+                        <div class="col-sm-6"><img src="/misc/photography/img-1.JPG" alt="Example" class="misc-photo"></div>
                       </div>
                       <div class="row top-buffer">
-                        <div class="col-sm-6"><img src="../misc/photography/img-1.JPG" alt="Example" class="misc-photo"></div>
-                        <div class="col-sm-6"><img src="../misc/photography/img-1.JPG" alt="Example" class="misc-photo"></div>
+                        <div class="col-sm-6"><img src="/misc/photography/img-1.JPG" alt="Example" class="misc-photo"></div>
+                        <div class="col-sm-6"><img src="/misc/photography/img-1.JPG" alt="Example" class="misc-photo"></div>
                       </div>                      
                     </div>
                   </div>
 
                   <div class="row top-buffer">
-                    <div class="col-sm-6"><img src="../misc/photography/img-1.JPG" alt="Example" class="misc-photo"></div>
-                    <div class="col-sm-6"><img src="../misc/photography/img-1.JPG" alt="Example" class="misc-photo"></div>
+                    <div class="col-sm-6"><img src="/misc/photography/img-1.JPG" alt="Example" class="misc-photo"></div>
+                    <div class="col-sm-6"><img src="/misc/photography/img-1.JPG" alt="Example" class="misc-photo"></div>
                   </div>
 
                 </div>
