added .htaccess file

--- a/projects/index.html
+++ b/projects/index.html
@@ -86,7 +86,7 @@
 
             <div class="page-content-item-title">
               <h3>
-                <a href="projects/project-euler.html">Project Euler</a>
+                <a href="project-euler">Project Euler</a>
               </h3>
             </div>
 
@@ -99,7 +99,7 @@
 
             <div class="page-content-item-text">
               <p>
-                <a href="projects/project-euler.html">
+                <a href="project-euler">
                   This is an ongoing project detailing my attempts, solutions, and coding process to the math and programming problems featured on the Project Euler website. Problems 1 through 20 are currently documented here.
                 </a>
               </p>
