added .htaccess file

--- a/projects/index.html
+++ b/projects/index.html
@@ -99,7 +99,7 @@
 
             <div class="page-content-item-text">
               <p>
-                <a href="project-euler">
+                <a href="/project-euler">
                   This is an ongoing project detailing my attempts, solutions, and coding process to the math and programming problems featured on the Project Euler website. Problems 1 through 20 are currently documented here.
                 </a>
               </p>
