fixed navigation and removed all .html extensions

--- a/projects/index.html
+++ b/projects/index.html
@@ -34,7 +34,7 @@
 
             <div class="page-content-item-title">
               <h3>
-                <a href="projects/project-euler.html">Project Euler</a>
+                <a href="project-euler">Project Euler</a>
               </h3>
             </div>
 
@@ -46,7 +46,7 @@
 
             <div class="page-content-item-text">
               <p>
-                <a href="projects/project-euler.html">
+                <a href="project-euler">
                   This is an ongoing project detailing my attempts, solutions, and coding process to the math and programming problems featured on the Project Euler website. Problems 1 through 20 are currently documented here.
                 </a>
               </p>
@@ -54,24 +54,23 @@
           </div>
 
           <!-- Lead page item element ends here. -->
-
           <div class="page-content-item">
 
             <div class="page-content-item-title">
               <h3>
-                <a href="projects/project-euler.html">Project Euler</a>
+                <a href="project-euler">Project Euler</a>
               </h3>
             </div>
 
             <div class="page-content-item-tags">
+              <button type="button" class="btn btn-default btn-xs tag-button">python</button>
               <button type="button" class="btn btn-default btn-xs tag-button">math</button>
-              <button type="button" class="btn btn-default btn-xs tag-button">logic</button>
-              <button type="button" class="btn btn-default btn-xs tag-button">geography</button>
+              <button type="button" class="btn btn-default btn-xs tag-button">euler</button>
             </div>
 
             <div class="page-content-item-text">
               <p>
-                <a href="projects/project-euler.html">
+                <a href="project-euler">
                   This is an ongoing project detailing my attempts, solutions, and coding process to the math and programming problems featured on the Project Euler website. Problems 1 through 20 are currently documented here.
                 </a>
               </p>
@@ -91,15 +90,14 @@
             </div>
 
             <div class="page-content-item-tags">
-              <button type="button" class="btn btn-default btn-xs tag-button">wow</button>
-              <button type="button" class="btn btn-default btn-xs tag-button">i</button>
-              <button type="button" class="btn btn-default btn-xs tag-button">finally</button>
-              <button type="button" class="btn btn-default btn-xs tag-button">did it</button>
+              <button type="button" class="btn btn-default btn-xs tag-button">python</button>
+              <button type="button" class="btn btn-default btn-xs tag-button">math</button>
+              <button type="button" class="btn btn-default btn-xs tag-button">euler</button>
             </div>
 
             <div class="page-content-item-text">
               <p>
-                <a href="/project-euler">
+                <a href="project-euler">
                   This is an ongoing project detailing my attempts, solutions, and coding process to the math and programming problems featured on the Project Euler website. Problems 1 through 20 are currently documented here.
                 </a>
               </p>
