--- a/primary-top-title.html
+++ b/primary-top-title.html
@@ -1,1 +1,1 @@
-<a href="../index.html"><h1>David Chen</h1><h4>software developer</h4></a>
+<a href="/"><h1>David Chen</h1><h4>software developer</h4></a>
