fixed navigation and removed all .html extensions

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       
       <div class="home-page-links col-xs-4 col-sm-3">
         <h4 class="home-page-link"><a href="/projects">projects</a></h4>
-        <h4 class="home-page-link"><a href="/blog">blog</a></h4>
+        <h4 class="home-page-link"><a href="/blog"><s>blog</s></a></h4>
         <h4 class="home-page-link"><a href="/misc">misc.</a></h4>
         <h4 class="home-page-link"><a href="/contact">contact</a></h4>
       </div>
